# pacman-mirror

./: Makefile.am  configure.ac  meson.build
doc/: index.asciidoc  index.css  makepkg.8.asciidoc  makepkg.conf.5.asciidoc  pacman.8.asciidoc  repo-add.8.asciidoc
etc/: makepkg.conf.in  pacman.conf.in
lib/libalpm/: add.c  alpm.h  dload.c  dload.h  handle.c  meson.build  sandbox.c  sandbox_fs.c  sync.c  trans.c
scripts/: makepkg.sh.in  pacman-db-upgrade.sh.in  repo-add.sh.in
scripts/libmakepkg/autodep/: library_depends.sh.in
scripts/libmakepkg/buildenv/: compiler.sh.in
scripts/libmakepkg/executable/: meson.build  zstd.sh.in
scripts/libmakepkg/lint_config/: variable.sh.in
scripts/libmakepkg/source/: git.sh.in
scripts/libmakepkg/tidy/: 30-purge.sh.in  99-emptydirs.sh.in  meson.build  strip.sh.in  zipkmod.sh.in
scripts/libmakepkg/util/: lock.sh.in  meson.build  pkgbuild.sh.in
scripts/po/: POTFILES.in
src/pacman/: callback.c  conf.c  conf.h  pacman.c  util.c  util.h
src/pacman/po/: de.po  en_GB.po
test/makepkg/: Makefile.am  README  makepkg-build-git-head-twice.sh  makepkg-checkout-dir-matches-branch.sh  meson.build  test_functions.sh
test/makepkg/tests/: Makefile.am  TESTS  dbfiles.sh  dotfiles.sh  pkgbuild.sh  util-pkgbuild.sh
test/pacman/: README  meson.build  pmrule.py  pmtest.py  util.py
test/scripts/: tidy_emptydirs.sh
